# Eloquent-Logic

./: README.md
frontend/LibLogic/: CMakeLists.txt  TreeViewer.h  edge.cpp  edge.h  launcherwidget.cpp  launcherwidget.h  logiceditorwindow.cpp  logiceditorwindow.h  logiclineedit.cpp  logiclineedit.h  logicnode.cpp  logicnode.h  main.cpp  mainwindow.ui  node.cpp  node.h  syntactictreeviewer.cpp  syntactictreeviewer.h  truthtableviewer.cpp  truthtableviewer.h  visualnode.h
liblogic/: .gitignore  CMakeLists.txt  README.md
liblogic/cmake/: EloquentLogicConfig.cmake.in
liblogic/docs/refactor/: notes.txt  todo.txt
liblogic/include/liblogic/: CMakeLists.txt  dictionary.h  interpretation_generator.h  liblogic.h  tree_sanitizer.h
liblogic/include/liblogic/private/: CMakeLists.txt  cursor.h  execution_stack.h  interpretation.h  operation_private.h  transformations.h  tree_builder.h  tree_walker.h
liblogic/include/liblogic/private/operations/: CMakeLists.txt  and_op.h  executor_base.h  not_op.h  or_op.h  val_op.h
liblogic/include/liblogic/private/transformations/: CMakeLists.txt  de_morgan.h  double_negation.h  equivalence_reduction.h  inverter.h  n-ization.h  neutral_elements.h  tree_recognizer_base.h
liblogic/include/liblogic/private/tree_strategies/: CMakeLists.txt  breath_first_traversal.h  depth_first_traversal.h  tree_walker_strategy_base.h
liblogic/parser_generator/: LogicParse.g4
liblogic/src/: CMakeLists.txt  cursor.cpp  execution_stack.cpp  liblogic.cpp  operation_private.cpp  operation_private.h  transformations.h  tree_builder.cpp  tree_sanitizer.cpp
liblogic/src/common/: CMakeLists.txt  feedback_base.cpp  feedback_base.hpp  steppable.cpp  steppable.hpp  steppable_result.cpp  steppable_result.hpp  type_definitions.hpp
liblogic/src/operations/: CMakeLists.txt  and_op.cpp  iff_op.cpp  iff_op.h  implies_op.cpp  not_op.cpp  operations.h  or_op.cpp  val_op.cpp
liblogic/src/parser/: CMakeLists.txt  LogicLex.g4  bnf.txt
liblogic/src/parser/util/: CMakeLists.txt  antlr_parser.cpp  antlr_parser.hpp  cursor.cpp  cursor.h  execution_stack.cpp  execution_stack.h  lexeme.cpp  lexeme.hpp  syntax_tree.cpp  syntax_tree.hpp  tree_sanitizer.cpp  tree_sanitizer.h
liblogic/src/sat/: CMakeLists.txt
liblogic/src/sat/Heuristics/: CMakeLists.txt  HeuristicsDB_DP.h
liblogic/src/sat/dp_naive/: CMakeLists.txt
liblogic/src/sat/dpll_mcl/: CMakeLists.txt  dpll_mcl.h  dpll_utils.cpp  dpll_utils.h
liblogic/src/sat/dpll_rand/: CMakeLists.txt  dpll_rand.h
liblogic/src/sat/resolution_naive_first_fit/: CMakeLists.txt  resolution_naive_first_fit.cpp  resolution_naive_first_fit.h
liblogic/src/sat/tests/: CMakeLists.txt  dpll_rand.cpp  resolution_naive_first_fit.cpp
liblogic/src/transformations/: CMakeLists.txt  de_morgan.cpp  double_negation.cpp  double_negation.h  equivalence_reduction.cpp  equivalence_reduction.h  implication_reduction.cpp  implication_reduction.h  inverter.cpp  inverter.h  n-ization.cpp  n-ization.h  neutral_elements.cpp  neutral_elements.h  tree_recognizer_base.h
liblogic/src/tree_strategies/: CMakeLists.txt  breath_first_traversal.cpp  depth_first_traversal.cpp  luke_tree_walker.cpp
liblogic/src/tree_utils/: CMakeLists.txt  breath_first_traversal.cpp  depth_first_traversal.cpp  depth_first_traversal.h  dictionary.h  luke_tree_walker.cpp  tree_builder.cpp  tree_builder.h  tree_walker.h  tree_walker_strategy_base.h
liblogic/src/truth_table/: CMakeLists.txt  operation_private.cpp  operation_private.h  truth_table.cpp  truth_table.hpp
liblogic/src/truth_table/operations/: CMakeLists.txt  executor_base.h  iff_op.cpp  implies_op.cpp  implies_op.h  or_op.cpp  val_op.cpp
liblogic/tests/: CMakeLists.txt  execution-context.cpp  main.cpp  transformations.cpp  traversal_tests.cpp  truth-machine.cpp
liblogic/tests/headers/: CMakeLists.txt  test_wrapper_functions.cpp  test_wrapper_functions.h
sat-algorithms/: CMakeLists.txt
sat-algorithms/Heuristics/: HeuristicEntryDP.cpp  HeuristicEntryDP.h  HeuristicsDB_DP.cpp
sat-algorithms/dp_naive/: CMakeLists.txt  dp_naive.cpp  dp_naive.h
sat-algorithms/dpll_mcl/: CMakeLists.txt  dpll_mcl.cpp
sat-algorithms/dpll_rand/: CMakeLists.txt  dpll_rand.cpp
sat-algorithms/resolution_naive_first_fit/: CMakeLists.txt  resolution_naive_first_fit.cpp
sat-algorithms/tests/: CMakeLists.txt  dp_naive.cpp  dpll_mcl.cpp
sat-algorithms/utilities/: CMakeLists.txt  common.h
